src/objects/Referral__c.object
<CustomObject>
    <fields>
        <fullName>Client_Status__c</fullName>
        <label>Client Status</label>
        <picklist>
            <picklistValues>
                <fullName>Waiting List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Started_on_Programme__c</fullName>
        <label>Date Started on Programme</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Referral__c</fullName>
        <label>Date of Referral</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_for_Exit__c</fullName>
        <label>Reason for Exit</label>
        <picklist>
            <controllingField>Client_Status__c</controllingField>
            <picklistValues>
                <fullName>Treatment completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred stable* (including release linking patient to other treatment site or other prison treatment)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred unstable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client did not wish to attend further treatment sessions because he/she considered him/herself to be stable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client refused to have further sessions or did not return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premature exit from treatment for non-compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Released from prison but not linked to other treatment site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Died</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sentenced to prison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General medical transfer or medical issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No longer lives in the area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental health transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prison to prison transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_not_accepted__c</fullName>
        <label>Reason not accepted</label>
        <picklist>
            <picklistValues>
                <fullName>Not met criteria (referred on)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not met criteria (not referred on)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No show - follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No show - no follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prison</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referral_Status__c</fullName>
        <label>Referral Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Accepted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referred_from_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred from Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referrals (Referred from Contact)</relationshipLabel>
        <relationshipName>Referrals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_from_Organisation_external__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred from Organisation (external)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_from_internal__c</fullName>
        <label>Referred from (internal)</label>
        <picklist>
            <controllingField>Source_of_Referral__c</controllingField>
            <picklistValues>
                <fullName>Cocaine Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drop-in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug Programme</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referred_to_Organisation_external__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred to Organisation (external)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Referrals (Referred to Organisation (external))</relationshipLabel>
        <relationshipName>Referrals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_to_Programme__c</fullName>
        <label>Referred to Programme</label>
        <picklist>
            <picklistValues>
                <fullName>Cocaine Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drop-in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug Programme</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_of_Referral__c</fullName>
        <label>Source of Referral</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other drug treatment centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acute hospital service excluding A&amp;E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social services/Community services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Police</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JLO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outreach worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile bus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental health liaison nurse at A&amp;E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accident &amp; emergency other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental health facility (including psychiatrist)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Referral</label>
    <nameField>
        <label>Referral Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>